adding pgvector compose

--- a/rag/docker-compose.yml
+++ b/rag/docker-compose.yml
@@ -41,4 +41,4 @@ volumes:
 
 
 
-# export POSTGRES_DSN="postgres://vectoruser:vectorpass@localhost:5432/vectordb?sslmode=disable"
+# export POSTGRES_DSN="postgres://vectoruser:vectorpass@localhost:5432/vectordb?sslmode=disable"3
